--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <!-- Menu -->
     <string name="menu_undo">Undo</string>
     <string name="menu_redo">Redo</string>
-    <string name="menu_github">GitHub</string>
+    <string name="menu_view_html">View</string>
 
     <!-- Dialog -->
     <string name="dialog_title">Insert link</string>
